<resources>
    <string name="app_name">Restaurant</string>

    <!-- Activity labels -->
    <string name="label_app_activity">Restaurant App</string>
    <string name="label_login_activity">Login</string>
    <string name="label_singup_activity">Sing up</string>

    <!-- login strings -->
    <string name="login_label">Login</string>
    <string name="login_et_name">Type your name</string>
    <string name="login_et_email">Type your email</string>
    <string name="login_et_password">type your password</string>
    <string name="login_btn_sign_up">Sign up</string>
    <string name="login_btn_login">Log in</string>

    <!-- sing up strings -->
    <string name="singup_label">Sing up</string>
    <string name="sing_title">Join our community</string>
    <string name="sing_et_name">Type your name</string>
    <string name="sing_et_email">Type your email</string>
    <string name="sing_et_password">Choice a password</string>
    <string name="sing_btn_singup">Sing up</string>

    <!-- navigation drawer -->
    <string name="app_label">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation drawer items -->
    <string name="nav_item_plates">Plates</string>
    <string name="nav_item_drinks">Drinks</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Log out</string>
    <string name="nav_item_about">About</string>

    <!-- Add item plates -->
    <string name="add_plate_et_name">Type plate name</string>
    <string name="add_plate_et_kind">type plate type</string>
    <string name="add_plate_et_price">Type plate price</string>
    <string name="add_plate_btn_time">Add time</string>
    <string name="add_plate_btn_add">Add plate</string>

    <!-- Add item drinks -->
    <string name="add_drink_et_name">Type drink name</string>
    <string name="add_drink_et_price">Type drink price</string>
    <string name="add_drink_btn_add">Add drink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
