<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_plates"
            android:icon="@drawable/menu_food"
            android:title="@string/nav_item_plates" />
        <item
            android:id="@+id/nav_item_drinks"
            android:icon="@drawable/menu_drink"
            android:title="@string/nav_item_drinks" />
        <item
            android:id="@+id/nav_item_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/nav_item_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_item_settings"
                android:icon="@drawable/menu_settings"
                android:title="@string/nav_item_settings" />
            <item
                android:id="@+id/nav_item_about"
                android:icon="@drawable/menu_about"
                android:title="@string/nav_item_about" />
            <item
                android:id="@+id/nav_item_logout"
                android:icon="@drawable/menu_logout"
                android:title="@string/nav_item_logout" />
        </menu>
    </item>

</menu>
